--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lintf": "eslint --ext .js .jsx ./src --fix"
+  },
+  "pre-commit": {
+    "run": ["lint"]
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -17,7 +21,13 @@
     "@vue/cli-service": "^3.9.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
+    "pre-commit": "^1.2.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
