--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open --hot",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "lintf": "eslint --ext .js .jsx ./src --fix"
   },
   "pre-commit": {
-    "run": ["lint"]
+    "run": [
+      "lint"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wangdson/vue-antd"
   },
   "dependencies": {
     "core-js": "^2.6.5",
